--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -20,9 +20,16 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0-preview.2.22153.2" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0-preview.1.22116.2" />
+	  <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
+	  <PackageReference Include="Serilog.Expressions" Version="3.3.0" />
+	  <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+	  <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.1-dev-00944" />
+	  <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
 	  <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
 	</ItemGroup>
