--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -40,20 +40,16 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0-preview.3.22178.4" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0-preview.3.22212.3" />
-	  <PackageReference Include="Serilog" Version="2.11.0-dev-01380" />
-	  <PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
-	  <PackageReference Include="Serilog.Sinks.Console" Version="4.0.2-dev-00890" />
-	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
-	  <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <ProjectReference Include="..\Dotnet9.AdminAPI\Dotnet9.AdminAPI.csproj" />
 	  <ProjectReference Include="..\Dotnet9.Application\Dotnet9.Application.csproj" />
 	  <ProjectReference Include="..\Dotnet9.EntityFrameworkCore\Dotnet9.EntityFrameworkCore.csproj" />
+	  <ProjectReference Include="..\Dotnet9.Extensions\Dotnet9.Extensions.csproj" />
 	</ItemGroup>
 
 	<ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
