--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -43,6 +43,7 @@
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0-preview.3.22212.3" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+	  <PackageReference Include="UAParser" Version="3.1.47" />
 	</ItemGroup>
 	
 	<ItemGroup>
