--- a/src/Dotnet9.Extensions/Dotnet9.Extensions.csproj
+++ b/src/Dotnet9.Extensions/Dotnet9.Extensions.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+		<PackageReference Include="Masuit.Tools.Core" Version="2.4.8.6" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.0-dev-00265" />
