--- a/src/Dotnet9.EntityFrameworkCore/Dotnet9.EntityFrameworkCore.csproj
+++ b/src/Dotnet9.EntityFrameworkCore/Dotnet9.EntityFrameworkCore.csproj
@@ -12,9 +12,8 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="MySql.Data" Version="8.0.28" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
 		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="6.13.19" />
 	</ItemGroup>
 
