--- a/src/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "SiteDomain": "https://dotnet9.com",
   "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
-  "AssetsRemotePath": "https://lequ.co",
+  "AssetsRemotePath": "https://img1.dotnet9.com",
   "Cache": {
     "IsRedis": true,
     "InstanceName": "db0",
