--- a/src/Dotnet9.Admin/Dotnet9.Admin.csproj
+++ b/src/Dotnet9.Admin/Dotnet9.Admin.csproj
@@ -10,6 +10,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 		<EnableDefaultCssItems>false</EnableDefaultCssItems>
 
 		<!-- Display name -->
