--- a/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
+++ b/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.DomainCommons\Dotnet9.DomainCommons.csproj" />
+    <ProjectReference Include="..\Dotnet9.JWT\Dotnet9.JWT.csproj" />
   </ItemGroup>
 
 </Project>
