--- a/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
+++ b/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0-preview.6.22330.3" />
   </ItemGroup>
 
   <ItemGroup>
