--- a/src/Dotnet9.Application.Contracts/Dotnet9.Application.Contracts.csproj
+++ b/src/Dotnet9.Application.Contracts/Dotnet9.Application.Contracts.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
     <ProjectReference Include="..\Dotnet9.Domain.Shared\Dotnet9.Domain.Shared.csproj" />
   </ItemGroup>
 
