--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,4 @@ src/Dotnet9.EntityFrameworkCore/Migrations/
 src/Dotnet9.Admin/package-lock.json
 src/Dotnet9.Admin/build/
 src/Dotnet9-VNext/IdentityService.WebAPI/appsettings.Development.json
+src/admin/Dotnet9.WebAPI/appsettings.Development.json
