--- a/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Dotnet9.WebAPI.Application.Contracts\Dotnet9.WebAPI.Application.Contracts.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.Domain.Shared\Dotnet9.WebAPI.Domain.Shared.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.Domain\Dotnet9.WebAPI.Domain.csproj" />
+    <ProjectReference Include="..\Dotnet9.WebAPI.Infrastructure\Dotnet9.WebAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
