--- a/src/Dotnet9.WebAPI.Application.Contracts/Dotnet9.WebAPI.Application.Contracts.csproj
+++ b/src/Dotnet9.WebAPI.Application.Contracts/Dotnet9.WebAPI.Application.Contracts.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.WebAPI.Domain.Shared\Dotnet9.WebAPI.Domain.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
