--- a/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
+++ b/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.Infrastructure\Dotnet9.Infrastructure.csproj" />
     <ProjectReference Include="..\Dotnet9.JWT\Dotnet9.JWT.csproj" />
+    <ProjectReference Include="..\Dotnet9.WebAPI.Domain.Shared\Dotnet9.WebAPI.Domain.Shared.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.Domain\Dotnet9.WebAPI.Domain.csproj" />
   </ItemGroup>
 
