--- a/src/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
+++ b/src/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
@@ -1,13 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+	<ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0-preview.7.22375.6" />
   </ItemGroup>
 
 </Project>
