--- a/src/Dotnet9.WebAPI.Domain.Shared/Dotnet9.WebAPI.Domain.Shared.csproj
+++ b/src/Dotnet9.WebAPI.Domain.Shared/Dotnet9.WebAPI.Domain.Shared.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+  </ItemGroup>
 
 </Project>
