--- a/src/Dotnet9.WebAPI.Domain/Dotnet9.WebAPI.Domain.csproj
+++ b/src/Dotnet9.WebAPI.Domain/Dotnet9.WebAPI.Domain.csproj
@@ -1,13 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.8" />
+	<ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.0-preview.7.22376.6" />
   </ItemGroup>
 
   <ItemGroup>
