--- a/src/Dotnet9.WebAPI.EFCore/Dotnet9.WebAPI.EFCore.csproj
+++ b/src/Dotnet9.WebAPI.EFCore/Dotnet9.WebAPI.EFCore.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
+	<ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0-pre03" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0-preview.7.22376.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.0.0-preview.6.22329.4-03" />
   </ItemGroup>
 
   <ItemGroup>
