--- a/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.WebAPI.csproj
@@ -1,13 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8">
+    <PackageReference Include="Mapster" Version="7.4.0-pre03" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0-preview.7.22376.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -15,7 +10,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.CommonInitializer\Dotnet9.CommonInitializer.csproj" />
-    <ProjectReference Include="..\Dotnet9.WebAPI.Application.Contracts\Dotnet9.WebAPI.Application.Contracts.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.Domain.Shared\Dotnet9.WebAPI.Domain.Shared.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.Domain\Dotnet9.WebAPI.Domain.csproj" />
     <ProjectReference Include="..\Dotnet9.WebAPI.EFCore\Dotnet9.WebAPI.EFCore.csproj" />
