--- a/src/Dotnet9.Commons.Test/Dotnet9.Commons.Test.csproj
+++ b/src/Dotnet9.Commons.Test/Dotnet9.Commons.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
+    <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
   </ItemGroup>
 
 </Project>
