--- a/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
+++ b/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
@@ -6,7 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
+    <ProjectReference Include="..\Dotnet9.Commons\Dotnet9.Commons.csproj" />
   </ItemGroup>
 
 </Project>
