--- a/src/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.WebAPI/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Site": {
+    "Domain": "https://dotnet9.com",
+    "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
+    "AssetsRemotePath": "https://img1.dotnet9.com",
+    "Owner": "沙漠尽头的狼",
+    "Start": 2019
+  },
   "DefaultDB": {
     "DbType": "PostgreSQL",
     "ConnectionString": "Host=[ip];Username=postgres;Database=dotnet9;port=5432;password=[password];"
