--- a/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
+++ b/src/Dotnet9.ASPNETCore/Dotnet9.ASPNETCore.csproj
@@ -5,7 +5,7 @@
 		<PackageReference Include="Mapster" Version="7.4.0-pre03" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.7.22376.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-rc.1.22426.7" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
 	</ItemGroup>
 
