--- a/src/Dotnet9.Commons/Dotnet9.Commons.csproj
+++ b/src/Dotnet9.Commons/Dotnet9.Commons.csproj
@@ -2,9 +2,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="AsmResolver.DotNet" Version="4.11.2" />
-		<PackageReference Include="FluentValidation" Version="11.2.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.7.22375.6" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="FluentValidation" Version="11.2.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 </Project>
