--- a/src/Dotnet9.EventBus/Dotnet9.EventBus.csproj
+++ b/src/Dotnet9.EventBus/Dotnet9.EventBus.csproj
@@ -2,7 +2,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0-rc.1.22426.10" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
 	</ItemGroup>
 
