--- a/src/Dotnet9.Infrastructure/Dotnet9.Infrastructure.csproj
+++ b/src/Dotnet9.Infrastructure/Dotnet9.Infrastructure.csproj
@@ -2,7 +2,7 @@
 
 	<ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0-rc.1.22426.7" />
     <PackageReference Include="RedLock.net" Version="2.3.2" />
   </ItemGroup>
 
