--- a/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
+++ b/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
@@ -2,9 +2,9 @@
 
 	<ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0-pre03" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0-preview.7.22376.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0-rc.1.22427.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.0.0-preview.6.22329.4-03" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.0.0-preview.7.22376.2-01" />
   </ItemGroup>
 
   <ItemGroup>
