--- a/src/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
+++ b/src/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
@@ -2,9 +2,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0-rc.1.23421.29" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-rc.1" />
-		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0-rc.2.23480.2" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-rc.2" />
+		<PackageReference Include="Serilog.AspNetCore" Version="7.0.1-dev-00320" />
 	</ItemGroup>
 
 	<ItemGroup>
