--- a/src/Dotnet9.EventBus/Dotnet9.EventBus.csproj
+++ b/src/Dotnet9.EventBus/Dotnet9.EventBus.csproj
@@ -2,8 +2,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0-rc.1.23419.4" />
-		<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0-rc.2.23479.6" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.6.0-beta.0" />
 	</ItemGroup>
 
 	<ItemGroup>
