--- a/src/Dotnetools/package.json
+++ b/src/Dotnetools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Dotnet工具箱",
-  "version": "2023.10.13.01",
+  "version": "2023.10.16.01",
   "description": "为开发人员收集方便的在线工具，具有出色的用户体验。",
   "keywords": [
     "productivity",
@@ -117,6 +117,7 @@
     "c8": "^8.0.0",
     "consola": "^3.0.2",
     "eslint": "^8.47.0",
+    "hygen": "^6.2.11",
     "jsdom": "^22.0.0",
     "less": "^4.1.3",
     "prettier": "^3.0.0",
